@@ -1,12 +1,15 @@
            SPELL=freecraft
          VERSION=020630
-          SOURCE=$SPELL-$VERSION-complete-linux.tar.bz2
-SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-complete
+          SOURCE=$SPELL-$VERSION.tar.bz2
+         SOURCE2=fcmp-020712.tar.bz2
+SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[0]=$SOURCEFORGE_URL/$SPELL/$SOURCE
-          MD5[0]=ca817b2938ab7bea9314611aede6db85
+  SOURCE2_URL[0]=$SOURCEFORGE_URL/$SPELL/$SOURCE2
+          MD5[0]=8eee3aa04beab06bf98344b5ae598b79
+          MD5[1]=fc3754b5ae096cba7838dd2cd0ceadfc
         WEB_SITE=http://www.freecraft.org/
          ENTERED=20020826
-         UPDATED=20020826
+         UPDATED=20021023
       LICENSE[0]=GPL
       MAINTAINER=eric@sandall.us
            SHORT='Free cross-platform RTS engine based on Warcraft'
