@@ -1,10 +1,0 @@
-#!/bin/sh
-# FreeCraft loader
-
-FREECRAFT_DIR="/usr/share/games/freecraft"
-
-cd $FREECRAFT_DIR
-./freecraft
-cd -
-
-# EOF
