@@ -1,3 +1,12 @@
+2002-10-24  Eric Sandall <eric@sandall.us>
+
+		Fixed Bug #1427 (so far, only the
+		X11 video option is verified to work)
+
+		Still need to make option to use CD data
+
+		Modified to use our optimizations, rather than just -O2
+
 2002-08-26  Eric Sandall <eric@sandall.us>
 
 		Added freecraft to games
